wanaku-operator/src/main/resources/ai/wanaku/operator/wanaku/camel-integration-capability-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: camel-integration-capability-service
  name: camel-integration-capability
spec:
  replicas: 1
  selector:
    matchLabels:
      app: camel-integration-capability
  template:
    metadata:
      labels:
        app: camel-integration-capability
    spec:
      containers:
      - name: camel-integration-capability
        image: quay.io/wanaku/camel-integration-capability:latest
        imagePullPolicy: Always
        livenessProbe:
          initialDelaySeconds: 30
          periodSeconds: 10
          tcpSocket:
            port: 9190
        ports:
        - containerPort: 9190
          name: grpc
          protocol: TCP
        readinessProbe:
          initialDelaySeconds: 10
          periodSeconds: 5
          tcpSocket:
            port: 9190
        volumeMounts:
        - mountPath: /data
          name: ""
      volumes:
        - name: ""
          persistentVolumeClaim:
            claimName: ""
