wanaku-operator/src/main/resources/ai/wanaku/operator/wanaku/wanaku-router-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ""
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ""
      component: ""
  template:
    metadata:
      labels:
        app: ""
    spec:
      containers:
        - name: "wanaku-mcp-router"
          image: quay.io/wanaku/wanaku-router-backend:0.0.8
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /api/v1/management/info/version
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 10
          ports:
            - containerPort: 8080
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /api/v1/management/info/version
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 5
          volumeMounts:
            - mountPath: /home/default/.wanaku/router
              name: router-volume
      volumes:
        - name: router-volume
          persistentVolumeClaim:
            claimName: router-volume-claim
