wanaku-operator/src/main/resources/ai/wanaku/operator/wanaku/wanaku-router-service-internal.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ""
    component: ""
  name: ""
spec:
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: ""
  sessionAffinity: None
  type: ClusterIP
