wanaku-operator/src/main/resources/ai/wanaku/operator/wanaku/wanaku-router-service-external.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: ""
  name: ""
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: ""
  wildcardPolicy: None
